[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/tasks/BaseTask.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/tasks/BossTask.gd" type="Script" id=2]
[ext_resource path="res://assets/environment/food/food_game_background.png" type="Texture" id=3]
[ext_resource path="res://utils/DialogPlayer.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 143 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 224, 5 )

[node name="BossTask" instance=ExtResource( 1 )]
visible = false
script = ExtResource( 2 )
testing = true
next_scene = "res://scenes/ui/FinishScreen.tscn"

[node name="Viewport" parent="M/M/PC/M/VC" index="0"]
render_target_update_mode = 0

[node name="FoodGameBackground" type="Sprite" parent="M/M/PC/M/VC/Viewport" index="0"]
position = Vector2( 192, 128 )
z_index = -610
texture = ExtResource( 3 )

[node name="YSort" type="YSort" parent="M/M/PC/M/VC/Viewport" index="1"]
unique_name_in_owner = true

[node name="StaticBody2D" type="StaticBody2D" parent="M/M/PC/M/VC/Viewport" index="2"]
position = Vector2( 0, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="M/M/PC/M/VC/Viewport/StaticBody2D" index="0"]
position = Vector2( -12, 125 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="M/M/PC/M/VC/Viewport" index="3"]
position = Vector2( 390, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="M/M/PC/M/VC/Viewport/StaticBody2D2" index="0"]
position = Vector2( 6, 127 )
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="M/M/PC/M/VC/Viewport" index="4"]
position = Vector2( 438, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="M/M/PC/M/VC/Viewport/StaticBody2D3" index="0"]
position = Vector2( -241, -11 )
shape = SubResource( 2 )

[node name="StaticBody2D4" type="StaticBody2D" parent="M/M/PC/M/VC/Viewport" index="5"]
position = Vector2( 438, 260 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="M/M/PC/M/VC/Viewport/StaticBody2D4" index="0"]
position = Vector2( -238, 7 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="M/M/PC/M/VC/Viewport" index="6"]
position = Vector2( 192, 128 )
current = true

[node name="PanelContainer" parent="M" index="2"]
margin_left = 192.0
margin_right = 192.0
margin_bottom = 3.0

[node name="PlayTimer" parent="." index="4"]
wait_time = 60.0

[node name="CanvasLayer" type="CanvasLayer" parent="." index="5"]

[node name="DialogPlayer" parent="CanvasLayer" index="0" instance=ExtResource( 4 )]
visible = true
character = 3
autoplay = true
autoplay_dialog = [ "You will forever be alone.", "Concentrate.", "You can't win. You can't hit me. And I can snap you in half." ]

[connection signal="finished" from="." to="." method="_on_BossTask_finished"]
[connection signal="dialog_finished" from="CanvasLayer/DialogPlayer" to="." method="_on_DialogPlayer_dialog_finished"]
